# squad-build

./: .gitignore  .mcp.json  README.md  manifest.json  squad-export.json
.squad/: routing.md  team.md
.squad/agents/fenster/: charter.md
.squad/agents/keyser/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/redfoot/: charter.md  history.md
.squad/agents/scribe/: charter.md
.squad/casting/: history.json  registry.json
analysis/: benchmark-json.md  historian-delta.md
analysis/benchmarking-sample/: benchmark.json
analysis/historian-sample/: preview.json
analysis/historian-sample/run-cartpole-abc123/: part-00000-dd918d2e-f3f8-41f7-b1c1-144d37015d36-c000.snappy.parquet
direct_docs/establish-a-simulation-environment/: about-simulation.md  amesa-simulation-api.md  connect-a-simulator-to-amesa.md  data-driven-simulation.md  publishing-a-sim.md
direct_docs/reference/sdk_reference/: controller-skill.md  coordinated-skills.md  perceptors-api.md  skill-groups.md  skills-api.md  teacher-api.md
distilled_docs/: config.md  controllers.md  core_concepts.md  end_to_end_example.md  perceptors.md  publish.md  scenarios.md  simulator_environment.md  templates.md  ui.md  workflow.md
docs/: agent.md  sensors.md  simulator.md
docs/skills/: group.md  overview.md  teacher.md
examples/controller-example/: pyproject.toml
examples/controller-example/controller_example/: controller.py
examples/coordinated-example/: pyproject.toml
examples/coordinated-example/coordinated_example/: coach.py
examples/goals-example/: pyproject.toml
examples/goals-example/goals_example/: goal.py
examples/orchestrator-example/orchestrator_example/: __init__.py
examples/perceptors-example/: pyproject.toml
examples/perceptors-example/perceptors_example/: perceptor.py
examples/selector-example/: pyproject.toml
examples/selector-example/selector_example/: teacher.py
examples/teacher-example/: pyproject.toml
examples/teacher-example/teacher_example/: teacher.py
full_example/: Dockerfile  pyproject.toml  run.md
full_example/agent/: build_agent.py  config.py  run_training_local.py  teacher.py
full_example/sim/: requirements.txt  run_local.py  server.py  server_impl.py  sim.py
instructions/: aggregated_doc_ref.md  config.md  controllers.md  core_concepts.md  end_to_end_example.md  inference.md  orchestration.md  perceptors.md  scenarios.md  simulator_environment.md  teachers_skills.md  templates.md  trainer_and_cfg.md  ui.md  zero_to_run.md
publishing-docs/: controller.md  coordinated.md  goals.md  perceptors.md  teacher.md
publishing-docs/controller/: interface.md  job-json-schema.md  overview.md  publishing.md  quirks.md  reference.md  scenarios.md
publishing-docs/coordinated/: child-agents.md  child-skills.md  interface.md  job-json-schema.md  overview.md  publishing.md  quirks.md  reference.md
publishing-docs/goals/: coordinated-goal.md  goal-types.md  interface.md  job-json-schema.md  overview.md  publishing.md  quirks.md  reference.md
publishing-docs/orchestrators/: job-json-schema.md  overview.md  reference.md
publishing-docs/perceptors/: interface.md  job-json-schema.md  overview.md  publishing.md  quirks.md  reference.md  registration.md
publishing-docs/selectors/: interface.md  job-json-schema.md  overview.md  publishing.md  quirks.md  reference.md
publishing-docs/teacher/: hyperparameters.md  interface.md  job-json-schema.md  overview.md  publishing.md  quirks.md  reference.md
schemas/: README.md  agent.md  coach.md  controller.md  coordinated-skills.md  data-flow.md  goals.md  perceptor.md  scenario.md  sensor.md  simulator.md  skill.md  teacher.md
v1/docs/: README.md  agent.md  goals.md  inference.md  perceptors.md  scenarios.md  sensors.md  simulator.md  spaces.md  trainer.md  training_job.md
v1/docs/skills/: controller.md  coordinated.md  overview.md  selector.md  teacher.md
v1/full_example/: pyproject.toml
v1/full_example/agent/: build_agent.py  config.py  perceptors.py  run_training_local.py  teacher.py
v1/full_example/sim/: run_local.py  scenarios.py  server.py  server_impl.py  sim.py
v2/docs/: README.md  perceptors.md  simulator.md  spaces.md  trainer.md  training_job.md
v2/docs/skills/: coordinated.md  overview.md  teacher.md
v2/full_example/: Dockerfile  pyproject.toml
v2/full_example/agent/: build_agent.py  config.py  run_training_local.py
v2/full_example/sim/: requirements.txt  run_local.py  server.py  server_impl.py  sim.py
