[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amesa-greenhouse-sim"
version = "0.1.0"
description = "Greenhouse climate simulator for AMESA."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "amesa-core==0.20.0",
  "gymnasium==0.28.1",
  "numpy==1.26.4",
]

[tool.setuptools.packages.find]
include = ["sim*"]
