[project]
name = "controller-example"
version = "0.1.0"
description = "Example SkillController: proportional-derivative controller for a position servo."
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "amesa-core",
]

[amesa]
type = "skill-controller"
entrypoint = "controller_example.controller:PDController"
