[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amesa-greenhouse-sim-v1"
version = "0.1.0"
description = "Greenhouse climate simulator for AMESA (v1 training)."
readme = "README.md"
requires-python = "3.11.8"
dependencies = [
  "amesa-core-dev==0.28.0.dev9",
  "amesa-train-dev==0.28.0.dev9",
  "gymnasium==0.28.1",
  "numpy==1.26.4",
  "grpcio>=1.60.0",
]

[tool.setuptools.packages.find]
include = ["sim*", "agent*"]
